--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -1,8 +1,17 @@
+body {
+    background-color: #8EAFD1;
+    
+}
+a {
+    color: #E6EBF0;
+    text-decoration: none;
+}
 .container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 150px 1fr 1fr 1fr 60px;
+    grid-template-rows: 150px auto auto auto 60px;
     gap: 10px;
+    
 }
 
 header {
@@ -37,7 +46,6 @@ header a {
 }
 
 .img-container img {
-    position: aboslute;
     width: 100%;
     height: 500px;
     object-fit: cover;
@@ -54,5 +62,14 @@ footer {
     grid-row: 5/6;
     text-align: center;
     background-color: #E6EBF0;
-    font-size: 20px
+    font-size: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+@media screen and (max-width: 800px) {
+    .container {
+        grid-template-columns: 1fr;
+    }
+
 }
