--- a/css/styles.css
+++ b/css/styles.css
@@ -67,9 +67,11 @@ header a {
 
 
 footer {
-    grid-column: 1/2;
-    grid-row: 4/5;
+    grid-column: 1/3;
+    grid-row: 5/6;
     text-align: center;
     background-color: #E6EBF0;
     font-size: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
