--- a/css/form.css
+++ b/css/form.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Cedarville+Cursive&family=Fuzzy+Bubbles&display=swap');
+
+body {
+    font-family: 'Barlow Condensed', sans-serif;
+}
 .container {
     display: grid;
     grid-template-columns: 1fr;
