--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Cedarville+Cursive&family=Fuzzy+Bubbles&display=swap');
+
+body {
+    font-family: 'Barlow Condensed', sans-serif;
+}
+
 body {
     background-color: #8EAFD1;
     
@@ -10,19 +16,20 @@ a {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 150px auto auto auto 60px;
-    gap: 10px;
-    
+    gap: 10px;    
 }
 
 header {
     grid-column: 1/3;
     grid-row: 1/2;
     background-color: #032030;
-    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  
 }
 
 header a {
-    float: right;
     color: #E6EBF0;
     text-align: center;
     padding: 14px 16px;
@@ -30,19 +37,31 @@ header a {
     font-size: 30px;
   }
 
+  .navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
   .logo {
     display: inline-block;
-    vertical-align: top;
-    width: 200px;
-    height: 150px;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    width: 15%;
   }
+
+img {
+    width: 100%;
+} 
+
+.nav-elements {
+   float: right;
+   margin-left: auto;
+}
 
 .img-container {
     width: 100%;
     position: relative;
     overflow: hidden;
+    padding-top: 2%;
 }
 
 .img-container img {
@@ -70,6 +89,7 @@ footer {
 @media screen and (max-width: 800px) {
     .container {
         grid-template-columns: 1fr;
+        grid-template-rows: 150px auto auto auto auto auto auto 60px;
     }
 
 }
