--- a/css/roots.css
+++ b/css/roots.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Cedarville+Cursive&family=Fuzzy+Bubbles&display=swap');
 
+body {
+    font-family: 'Barlow Condensed', sans-serif;
+}
 .container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -11,6 +15,7 @@ header {
     grid-row: 1/2;
     background-color: #032030;
     overflow: hidden;
+    margin: -10px;
 }
 
 header a {
