--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Cedarville+Cursive&family=Fuzzy+Bubbles&display=swap');
+
+body {
+    font-family: 'Barlow Condensed', sans-serif;
+}
 .container {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 150px 1fr 1fr 60px;
-    gap: 10px;
+    margin: -10px;
 }
 
 header {
