--- a/css/caps.css
+++ b/css/caps.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: 'Barlow Condensed', sans-serif;
+    background-color: #8EAFD1; /* Optional: Adjust background color if needed */
 }
 
 .container {
@@ -76,8 +77,12 @@ header .navbar a {
 }
 
 .button {
-    text-align: center; 
-    margin-top: 20px;
+    background-color:#032030;
+    color: white;
+    padding: 15px 32px;
+    border-radius: 20px;
+    font-family: 'Barlow Condensed', sans-serif;
+    font-size: large;
 }
 
 .contact {
