--- a/css/mentalhealth.css
+++ b/css/mentalhealth.css
@@ -10,17 +10,21 @@ body {
     grid-template-columns: 1fr;
     grid-template-rows: 150px auto auto auto auto;
     gap: 20px; 
+    margin: 0;
 }
 
 header {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     background-color: #032030;
+    margin: -10px; 
     overflow: hidden;
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
 }
 
 header a {
-    float: right;
     color: #E6EBF0;
     text-align: center;
     padding: 14px 16px;
@@ -33,9 +37,8 @@ header a {
     vertical-align: top;
     width: 200px;
     height: 150px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-}
+    margin-left: 20px; 
+} 
 
 .mentalhealthhero {
     display: flex;
@@ -44,16 +47,20 @@ header a {
     grid-column: 1 / 2; 
     grid-row: 2 / 3;
     overflow: hidden;
+    margin: -20px; 
+
 }
 
 .mentalhealthhero img {
     width: 100%;
     height: auto;
     object-fit: cover;
+    margin: -40px; 
 }
 
 .italic-text {
     font-style: italic;
+    font-size: 20px;
 }
 
 .dscrphero {
@@ -69,7 +76,7 @@ header a {
     grid-column: 1 / 2;
     grid-row: 4 / 5;
     text-align: center;
-    font-size: 20px;
+    font-size: 30px;
     margin-top: 0;
     padding-top: 0;
 }
@@ -78,25 +85,45 @@ header a {
     font-size: 18px;
 }
 
-.mentalhealthhub {
-    font-size: 24px;
-    margin-bottom: 20px;
-} 
+.mentalhealthhero img, .picsofmentalhealhhub {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    margin: 0; /* Adjust margin for mobile view */
+}
 
 .img1-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, auto); 
+    grid-template-columns: 1fr; /* Single column for mobile */
+    grid-template-rows: repeat(6, auto); /* Enough rows for all images */
     grid-column: 1 / 2;
     grid-row: 5 / 6;
     gap: 10px;
 }
 
-.picsofmentalhealhhub {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+.hamburger-menu {
+    display: flex;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 30px;
+    height: 25px;
 }
+
+
+.nav-links {
+    display: none; /* Initially hide the dropdown */
+    position: absolute; /* Position it */
+    background-color: #032030;
+    width: 100%; /* Full width for dropdown */
+    display: none;
+}
+
+.menu-btn:checked ~ .nav-links {
+    display: block;
+}
+
+
 
 footer {
     grid-column: 1 / 2;
@@ -104,4 +131,21 @@ footer {
     text-align: center;
     background-color: #E6EBF0;
     font-size: 30px;
+}
+
+@media (min-width: 800px) {
+    .hamburger-menu {
+        display: none; /* Hide hamburger menu on larger screens */
+    }
+
+    .nav-links {
+        display: flex; /* Show navigation links in a row */
+        /* ... additional styles for desktop navigation ... */
+    }
+
+    .img1-container {
+        grid-template-columns: repeat(3, 1fr); 
+        grid-template-rows: repeat(2, auto); 
+    }
+    
 }
