--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -1,9 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Cedarville+Cursive&family=Fuzzy+Bubbles&display=swap');
-
-body {
-    font-family: 'Barlow Condensed', sans-serif;
-}
-
 body {
     background-color: #8EAFD1;
     
@@ -16,52 +10,78 @@ a {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 150px auto auto auto 60px;
-    gap: 10px;    
+    gap: 10px;
+    margin: -10px;
 }
 
 header {
     grid-column: 1/3;
     grid-row: 1/2;
     background-color: #032030;
+    overflow: hidden;
+}
+
+.menu-btn {
+    display: none; 
+}
+
+.menu-icon {
+    display: none;
+    cursor: pointer;
+}
+
+.menu-icon span,
+.menu-icon span::before,
+.menu-icon span::after {
+    display: block;
+    height: 3px;
+    background-color: black;
+    margin: 5px 0;
+    transition: 0.3s;
+}
+
+.menu-icon span::before,
+.menu-icon span::after {
+    content: '';
+    position: relative;
+}
+
+header ul {
+    float: right;
+    list-style: none;
+    margin: 0;
+    padding: 0;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-  
+}
+
+header li {
+    margin: 0;
 }
 
 header a {
-    color: #E6EBF0;
+    display: block;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
     font-size: 30px;
-  }
+}
 
-  .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
 
-  .logo {
-    display: inline-block;
-    width: 15%;
-  }
+.logo {
+    float: left;
+    width: 200px;
+    height: 150px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
 
-img {
-    width: 100%;
-} 
-
-.nav-elements {
-   float: right;
-   margin-left: auto;
+.menu-btn {
+    display: none;
 }
 
 .img-container {
     width: 100%;
     position: relative;
     overflow: hidden;
-    padding-top: 2%;
 }
 
 .img-container img {
@@ -89,7 +109,42 @@ footer {
 @media screen and (max-width: 800px) {
     .container {
         grid-template-columns: 1fr;
-        grid-template-rows: 150px auto auto auto auto auto auto 60px;
     }
 
+    .header ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        background-color: #fff;
+        position: absolute;
+        top: 20px;
+        display: none;
+        flex-direction: column;
+        width: 100%; 
+    }
+
+    .header li {
+        border-bottom: 0px solid pink;
+    }
+
+    .header .menu-icon {
+        display: block;
+        cursor: pointer;
+    }
+
+    .logo {
+        display: block;
+    }
+
+    .menu-btn {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 60px;
+        height: 60px;
+        opacity: 0;
+        cursor: pointer;
+        z-index: 3;
+    }
 }
