--- a/css/uncambass.css
+++ b/css/uncambass.css
@@ -9,38 +9,33 @@ body {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 150px 100px auto auto 60px;
     gap: 10px;
-}
-
-header {
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
-    background-color: #032030;
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center; 
-    padding: 0 20px;
-    overflow: hidden;
     margin: -10px;
 
 }
 
-.logo {
-    display: inline-block; /* Keep logo inline */
-    vertical-align: top;
-    width: 200px;
-    height: 150px;
+header {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    background-color: #032030;
+    overflow: hidden;
 }
 
-header .navbar {
-    display: flex; /* Use Flexbox for the navigation links */
-}
-
-header .navbar a {
+header a {
+    float: right;
     color: #E6EBF0;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 30px;
+}
+
+.logo {
+    display: inline-block;
+    vertical-align: top;
+    width: 200px;
+    height: 150px;
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
 .org-name {
     grid-column: 1/3;
