--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -2,31 +2,28 @@
 
 body {
     font-family: 'Barlow Condensed', sans-serif;
+    background-color: #8EAFD1;
 }
 
-body {
-    background-color: #8EAFD1;
-    
-}
 a {
     color: #E6EBF0;
     text-decoration: none;
 }
+
 .container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 150px auto auto auto 60px;
-    gap: 10px;    
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, auto);
+    gap: 10px;
 }
 
 header {
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 1/2;
     background-color: #032030;
     display: flex;
     align-items: center;
     justify-content: space-between;
-  
 }
 
 header a {
@@ -35,26 +32,26 @@ header a {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 30px;
-  }
+}
 
-  .navbar {
+.navbar {
     display: flex;
     align-items: center;
     justify-content: space-between;
-  }
+}
 
-  .logo {
+.logo {
     display: inline-block;
     width: 15%;
-  }
+}
 
 img {
     width: 100%;
-} 
+}
 
 .nav-elements {
-   float: right;
-   margin-left: auto;
+    float: right;
+    margin-left: auto;
 }
 
 .img-container {
@@ -77,8 +74,8 @@ img {
 }
 
 footer {
-    grid-column: 1/3;
-    grid-row: 5/6;
+    grid-column: 1/2;
+    grid-row: 7/8;
     text-align: center;
     background-color: #E6EBF0;
     font-size: 30px;
@@ -86,10 +83,19 @@ footer {
     padding-bottom: 10px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 800px) {
     .container {
-        grid-template-columns: 1fr;
-        grid-template-rows: 150px auto auto auto auto auto auto 60px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 150px auto auto auto 60px;
     }
 
+    .img-container {
+        padding-top: 0;
+    }
+
+
+
+    header {
+        grid-column: 1/3;
+    }
 }
