--- a/css/caps.css
+++ b/css/caps.css
@@ -1,20 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Cedarville+Cursive&family=Fuzzy+Bubbles&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap');
 
 body {
     font-family: 'Barlow Condensed', sans-serif;
-    background-color: #8EAFD1; /* Optional: Adjust background color if needed */
 }
 
 .container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 150px 100px auto auto 60px;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto auto;
     gap: 10px;
 }
 
+
 header {
-    grid-column: 1 / 3;
-    grid-row: 1 / 2;
     background-color: #032030;
     display: flex; 
     justify-content: space-between; 
@@ -22,18 +20,17 @@ header {
     padding: 0 20px;
     overflow: hidden;
     margin: -10px;
-
 }
 
 .logo {
-    display: inline-block; /* Keep logo inline */
+    display: inline-block;
     vertical-align: top;
     width: 200px;
     height: 150px;
 }
 
 header .navbar {
-    display: flex; /* Use Flexbox for the navigation links */
+    display: flex;
 }
 
 header .navbar a {
@@ -43,24 +40,12 @@ header .navbar a {
     text-decoration: none;
     font-size: 30px;
 }
+
 .org-name {
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 2/3;
     font-size: 30px;
-}
-
-.content {
-    grid-column: 2/3;
-    grid-row: 3/4;
-    text-align: center;
-}
-.content h1 {
-    font-size: 50px;
-}
-.content p {
-    font-size: x-large;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 10px;
 }
 
 .main-image {
@@ -71,7 +56,7 @@ header .navbar a {
 
 .main-image img {
     max-width: 100%;
-    height: 500px;
+    height: auto;
     width: 100%;
     border-radius: 10px;
 }
@@ -85,22 +70,67 @@ header .navbar a {
     font-size: large;
 }
 
-.contact {
-    grid-column: 1/3;
-    grid-row: 4/5;
+.content {
     text-align: center;
-    justify-self: center; 
-    align-self: center;
-    font-size: 20px
+}
+
+.content h1 {
+    font-size: 60px; /* Adjust if needed */
+}
+
+.content p {
+    font-size: 20px; /* Increased font size for better readability */
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.contact {
+    text-align: center;
+}
+
+.contact h2 {
+    font-size: 30px; /* Adjust if needed */
+}
+
+.contact p {
+    font-size: 18px; /* Adjust if needed */
 }
 
 
 footer {
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 5/6;
     text-align: center;
     background-color: #E6EBF0;
     font-size: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+
+@media screen and (min-width: 800px) {
+    .container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 150px 100px auto auto 60px;
+    }
+
+    header {
+        grid-column: 1/3;
+        grid-row: 1/2;
+    }
+
+    .org-name {
+        grid-column: 1/3;
+    }
+
+    .main-image {
+        grid-column: 1/2;
+    }
+
+    .content, .contact {
+        grid-column: 2/3;
+    }
+
+    footer {
+        grid-column: 1/3;
+    }
 }
