--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Cedarville+Cursive&family=Fuzzy+Bubbles&display=swap');
 
+
 body {
     font-family: 'Barlow Condensed', sans-serif;
 }
+
 .container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 150px 1fr 1fr 60px;
+    grid-template-rows: auto auto auto auto auto;
     margin: -10px;
 }
 
-header {
-    grid-column: 1/2;
-    grid-row: 1/2;
-    background-color: #032030;
-    overflow: hidden;
-}
 
-header a {
-    float: right;
-    color: #E6EBF0;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 30px;
+header {
+    background-color: #032030;
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    padding: 0 20px;
+    overflow: hidden;
 }
 
 .logo {
@@ -31,52 +27,85 @@ header a {
     vertical-align: top;
     width: 200px;
     height: 150px;
-    margin-right: 20px;
-    margin-bottom: 20px;
 }
 
-
-.hero-text{
+.hero-text {
     text-align: center;
-  position: absolute;
-  font-size: 10vw;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -100%);
-  color: white;
+    position: absolute;
+    font-size: 5vw; /* Adjusted for mobile */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
 }
 
 .hero-image {
-    grid-column: 1/2;
-    grid-row: 2/3;
     background-image: url("/images/unc.jpeg");
-    height: 100%;
     background-position: center;
-
     background-size: cover;
     position: relative;
+    height: 200px; /* Adjusted for mobile */
 }
 
-
 .content-2 {
-    grid-column: 1/2;
-    grid-row: 3/4;
     text-align: center;
-    text-align: center;
-
 }
 
 .content-2 p {
-    font-size: larger;
+    font-size: medium; /* Adjusted for mobile */
 }
 
-
 footer {
-    grid-column: 1/3;
-    grid-row: 5/6;
     text-align: center;
     background-color: #E6EBF0;
-    font-size: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    font-size: 20px; /* Adjusted for mobile */
+    padding: 10px;
+}
+
+/* Media Query for Desktop Screens */
+@media screen and (min-width: 800px) {
+    .container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 150px 1fr 1fr 60px;
+    }
+
+    header {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+
+    header a {
+        float: right;
+        font-size: 30px;
+    }
+
+    .logo {
+        display: inline-block;
+        vertical-align: top;
+        width: 200px;
+        height: 150px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+    }
+
+    .hero-text {
+        font-size: 10vw;
+        transform: translate(-50%, -100%);
+    }
+
+    .hero-image {
+        grid-column: 1/2;
+        grid-row: 2/3;
+        height: 100%;
+    }
+
+    .content-2 {
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+
+    footer {
+        grid-column: 1/3;
+        grid-row: 4/5;
+    }
 }
