--- a/css/uncambass.css
+++ b/css/uncambass.css
@@ -1,27 +1,145 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Cedarville+Cursive&family=Fuzzy+Bubbles&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap');
 
 body {
+    margin: 0;
     font-family: 'Barlow Condensed', sans-serif;
+}
+
+a {
+    color: black;
 }
 
 .container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 150px 100px auto auto 60px;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto auto;
     gap: 10px;
-    margin: -10px;
-
 }
+
 
 header {
-    grid-column: 1/3;
-    grid-row: 1/2;
     background-color: #032030;
+    display: flex; 
+    justify-content: flex-end;
+    align-items: center; 
+    padding: 0 20px;
     overflow: hidden;
+    margin: -10px;
+    box-shadow: 1px 1px 4px 0 rgba(0,0,0,.2);
+    width: 100%;
+    height: 100px;
+
 }
 
-header a {
+.header ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    overflow: hidden;
+    background-color: #fff;
+}
+
+.header li a {
+    display: block;
+    padding: 20px 20px;
+    border-right: 1px solid #f4f4f4;
+    text-decoration: none;
+}
+
+.header li a:hover,
+.header .menu-btn:hover {
+    background-color: #f4f4f4;
+}
+
+.header .logo {
+    display: block;
+    float: left;
+    font-size: 2em;
+    padding: 10px 20px;
+    text-decoration: none;
+}
+
+.header .menu {
+    clear: both;
+    max-height: 0;
+    transition: max-height .2s ease-out;
+}
+
+  /* menu icon */
+.header .menu-icon {
+    cursor: pointer;
+    display: inline-block;
     float: right;
+    padding: 28px 20px;
+    position: relative;
+}
+
+.header .menu-icon .navicon {
+    background: #333;
+    display: block;
+    height: 2px;
+    position: relative;
+    transition: background .2s ease-out;
+    width: 18px;
+}
+
+.header .menu-icon .navicon:before,
+.header .menu-icon .navicon:after {
+    background: #333;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+
+.header .menu-icon .navicon:before {
+    top: 5px;
+}
+
+.header .menu-icon .navicon:after {
+    top: -5px;
+}
+
+  /* menu btn */
+
+.header .menu-btn {
+    display: none;
+}
+
+.header .menu-btn:checked ~ .menu {
+    max-height: 240px;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon {
+    background: transparent;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
+    transform: rotate(-45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
+    transform: rotate(45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+    top: 0;
+}
+.logo {
+    display: inline-block;
+    vertical-align: top;
+    width: 200px;
+    height: 150px;
+}
+
+header .navbar {
+    display: flex;
+}
+
+header .navbar a {
     color: #E6EBF0;
     text-align: center;
     padding: 14px 16px;
@@ -29,68 +147,103 @@ header a {
     font-size: 30px;
 }
 
-.logo {
-    display: inline-block;
-    vertical-align: top;
-    width: 200px;
-    height: 150px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-}
 .org-name {
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 2/3;
-    font-size: 30px;
-}
-
-.content {
-    grid-column: 2/3;
-    grid-row: 3/4;
-    text-align: center;
-}
-.content h1 {
-    font-size: 50px;
-}
-.content p {
-    font-size: x-large;
-    padding-left: 30px;
-    padding-right: 30px;
+    font-size: xx-large;
+    padding-left: 10px;
 }
 
 .main-image {
     grid-column: 1/2;
+    /* Adjusted grid-row to ensure proper placement */
     grid-row: 3/4;
     position: relative;
 }
 
 .main-image img {
     max-width: 100%;
-    height: 500px;
+    height: auto;
     width: 100%;
     border-radius: 10px;
 }
 
-.button {
-    text-align: center; 
-    margin-top: 20px;
+.content {
+    text-align: center;
+}
+
+.content h1 {
+    font-size: 60px; /* Adjust if needed */
+}
+
+.content p {
+    font-size: 20px; /* Increased font size for better readability */
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .contact {
-    grid-column: 1/3;
-    grid-row: 4/5;
     text-align: center;
-    justify-self: center; 
-    align-self: center;
-    font-size: 20px
+}
+
+.contact h2 {
+    font-size: 30px; /* Adjust if needed */
+}
+
+.contact p {
+    font-size: 18px; /* Adjust if needed */
 }
 
 
 footer {
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 5/6;
     text-align: center;
     background-color: #E6EBF0;
     font-size: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+
+@media screen and (min-width: 800px) {
+    .container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 150px 100px auto auto 60px;
+    }
+
+    .header li {
+        float: left;
+    }
+    .header li a {
+        padding: 20px 30px;
+    }
+    .header .menu {
+        clear: none;
+        float: right;
+        max-height: none;
+    }
+    .header .menu-icon {
+        display: none;
+    }
+
+    header {
+        grid-column: 1/3;
+        grid-row: 1/2;
+    }
+
+    .org-name {
+        grid-column: 1/3;
+    }
+
+    .main-image {
+        grid-column: 1/2;
+    }
+
+    .content, .contact {
+        grid-column: 2/3;
+    }
+
+    footer {
+        grid-column: 1/3;
+    }
 }
