--- a/css/capsform.css
+++ b/css/capsform.css
@@ -1,43 +1,136 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Cedarville+Cursive&family=Fuzzy+Bubbles&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap');
 
 body {
     font-family: 'Barlow Condensed', sans-serif;
+    margin: 0;
 }
+
+a {
+    color: #E6EBF0;
+    text-decoration: none;
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 150px auto 60px;
+    grid-template-rows: auto auto auto auto auto auto;
     gap: 10px;
-    margin: -10px;
-    
 }
 
 header {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+    grid-column: 1/2;
+    grid-row: 1/2;
     background-color: #032030;
     overflow: hidden;
-    display: flex; 
-    align-items: center; 
-    justify-content: space-between; 
+    margin: -10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.logo {
-    display: inline-block;
-    vertical-align: top;
-    width: 200px;
-    height: 150px;
-    margin-right: 20px; /* Adjust as needed */
+header ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    overflow: hidden;
 }
 
-header a {
-    float: right;
-    color: #E6EBF0;
-    text-align: center;
-    padding: 14px 16px;
+header li a {
+    display: block;
+    padding: 20px 20px;
     text-decoration: none;
-    font-size: 30px;
-    margin-left: 10px; /* Add margin to separate nav links */
+    font-size: 27px;
+}
+
+header li a:hover,
+header .menu-btn:hover {
+    background-color: #E6EBF0;
+    color: #032030;
+}
+
+header .leaf {
+    display: block;
+    float: left;
+    width: 100%;
+    height: 100%;
+}
+
+header .logo {
+    width: 35%;
+    height: auto;
+}
+
+.header-content {
+    display: flex;
+    align-items: center;
+}
+
+header .menu {
+    clear: both;
+    max-height: 0;
+    transition: max-height .2s ease-out;
+}
+
+header .menu-icon {
+    cursor: pointer;
+    display: inline-block;
+    float: right;
+    padding: 28px 20px;
+    position: relative;
+}
+
+header .menu-icon .navicon {
+    background: #E6EBF0;
+    display: block;
+    height: 3px;
+    position: relative;
+    transition: background .2s ease-out;
+    width: 30px;
+}
+
+header .menu-icon .navicon:before,
+header .menu-icon .navicon:after {
+    background: #E6EBF0;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+
+header .menu-icon .navicon:before {
+    top: 10px;
+}
+
+header .menu-icon .navicon:after {
+    top: -10px;
+}
+
+/* menu btn */
+header .menu-btn {
+    display: none;
+}
+
+header .menu-btn:checked ~ .menu {
+    max-height: 240px;
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon {
+    background: transparent;
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon:before {
+    transform: rotate(-45deg);
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon:after {
+    transform: rotate(45deg);
+}
+
+header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+    top: 0;
 }
 
 .form-container {
@@ -88,7 +181,7 @@ button:hover {
 }
 
 /* Media query for screens less than or equal to 800px */
-@media (max-width: 800px) {
+@media (min-width: 800px) {
     input[type="text"],
     input[type="tel"],
     input[type="email"],
