--- a/css/caps.css
+++ b/css/caps.css
@@ -2,49 +2,141 @@
 
 body {
     font-family: 'Barlow Condensed', sans-serif;
+    margin: 0;
+}
+
+a {
+    color: #E6EBF0;
+    text-decoration: none;
 }
 
 .container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto auto;
     gap: 10px;
 }
 
-
 header {
+    grid-column: 1/2;
+    grid-row: 1/2;
     background-color: #032030;
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center; 
-    padding: 0 20px;
     overflow: hidden;
     margin: -10px;
-}
-
-.logo {
-    display: inline-block;
-    vertical-align: top;
-    width: 200px;
-    height: 150px;
-}
-
-header .navbar {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-header .navbar a {
-    color: #E6EBF0;
-    text-align: center;
-    padding: 14px 16px;
+header ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    overflow: hidden;
+}
+
+header li a {
+    display: block;
+    padding: 20px 20px;
     text-decoration: none;
-    font-size: 30px;
+    font-size: 27px;
+}
+
+header li a:hover,
+header .menu-btn:hover {
+    background-color: #E6EBF0;
+    color: #032030;
+}
+
+header .leaf {
+    display: block;
+    float: left;
+    width: 100%;
+    height: 100%;
+}
+
+header .logo {
+    width: 35%;
+    height: auto;
+}
+
+.header-content {
+    display: flex;
+    align-items: center;
+}
+
+header .menu {
+    clear: both;
+    max-height: 0;
+    transition: max-height .2s ease-out;
+}
+
+header .menu-icon {
+    cursor: pointer;
+    display: inline-block;
+    float: right;
+    padding: 28px 20px;
+    position: relative;
+}
+
+header .menu-icon .navicon {
+    background: #E6EBF0;
+    display: block;
+    height: 3px;
+    position: relative;
+    transition: background .2s ease-out;
+    width: 30px;
+}
+
+header .menu-icon .navicon:before,
+header .menu-icon .navicon:after {
+    background: #E6EBF0;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+
+header .menu-icon .navicon:before {
+    top: 10px;
+}
+
+header .menu-icon .navicon:after {
+    top: -10px;
+}
+
+/* menu btn */
+header .menu-btn {
+    display: none;
+}
+
+header .menu-btn:checked ~ .menu {
+    max-height: 240px;
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon {
+    background: transparent;
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon:before {
+    transform: rotate(-45deg);
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon:after {
+    transform: rotate(45deg);
+}
+
+header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+    top: 0;
 }
 
 .org-name {
     grid-column: 1/2;
     grid-row: 2/3;
-    font-size: 30px;
+    font-size: xx-large;
     padding-left: 10px;
 }
 
@@ -61,6 +153,10 @@ header .navbar a {
     border-radius: 10px;
 }
 
+.content {
+    text-align: center;
+}
+
 .button {
     background-color:#032030;
     color: white;
@@ -70,16 +166,13 @@ header .navbar a {
     font-size: large;
 }
 
-.content {
-    text-align: center;
-}
 
 .content h1 {
-    font-size: 60px; /* Adjust if needed */
+    font-size: 60px;
 }
 
 .content p {
-    font-size: 20px; /* Increased font size for better readability */
+    font-size: 20px;
     padding-left: 30px;
     padding-right: 30px;
 }
@@ -89,13 +182,12 @@ header .navbar a {
 }
 
 .contact h2 {
-    font-size: 30px; /* Adjust if needed */
+    font-size: 30px;
 }
 
 .contact p {
-    font-size: 18px; /* Adjust if needed */
+    font-size: 18px;
 }
-
 
 footer {
     grid-column: 1/2;
@@ -110,12 +202,29 @@ footer {
 @media screen and (min-width: 800px) {
     .container {
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 150px 100px auto auto 60px;
+        grid-template-rows: 150px auto auto auto 60px;
     }
 
     header {
         grid-column: 1/3;
-        grid-row: 1/2;
+    }
+
+    header li {
+        float: left;
+    }
+
+    header li a {
+        padding: 20px 30px;
+    }
+
+    header .menu {
+        clear: none;
+        float: right;
+        max-height: none;
+    }
+
+    header .menu-icon {
+        display: none;
     }
 
     .org-name {
@@ -126,7 +235,7 @@ footer {
         grid-column: 1/2;
     }
 
-    .content, .contact {
+    .content, .contact, .button {
         grid-column: 2/3;
     }
 
