--- a/css/mentalhealth.css
+++ b/css/mentalhealth.css
@@ -3,42 +3,139 @@
 body {
     font-family: 'Barlow Condensed', sans-serif;
     background-color: #8EAFD1;
+    margin: 0;
+
+}
+
+a {
+    color: #E6EBF0;
+    text-decoration: none;
 }
 
 .container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 150px auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto auto;
     gap: 20px; 
-    margin: 0;
 }
 
 header {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+    grid-column: 1/2;
+    grid-row: 1/2;
     background-color: #032030;
-    margin: -10px; 
     overflow: hidden;
+    margin: -10px;
     display: flex;
-    justify-content: space-between; 
-    align-items: center; 
+    align-items: center;
+    justify-content: space-between;
+
 }
 
-header a {
-    color: #E6EBF0;
-    text-align: center;
-    padding: 14px 16px;
+header ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    overflow: hidden;
+}
+
+header li a {
+    display: block;
+    padding: 20px 20px;
     text-decoration: none;
-    font-size: 30px;
+    font-size: 27px;
 }
 
-.logo {
+header li a:hover,
+header .menu-btn:hover {
+    background-color: #E6EBF0;
+    color:#032030;
+}
+
+header .leaf {
+    display: block;
+    float: left;
+    width: 100%;
+    height: 100%;
+}
+
+header .logo {
+    width: 35%;
+    height: auto;
+}
+
+.header-content {
+    display: flex;
+    align-items: center;
+}
+
+header .menu {
+    clear: both;
+    max-height: 0;
+    transition: max-height .2s ease-out;
+
+}
+
+header .menu-icon {
+    cursor: pointer;
     display: inline-block;
-    vertical-align: top;
-    width: 200px;
-    height: 150px;
-    margin-left: 20px; 
-} 
+    float: right;
+    padding: 28px 20px;
+    position: relative;
+}
+
+header .menu-icon .navicon {
+    background: #E6EBF0;
+    display: block;
+    height: 3px;
+    position: relative;
+    transition: background .2s ease-out;
+    width: 30px;
+}
+
+header .menu-icon .navicon:before,
+header .menu-icon .navicon:after {
+    background: #E6EBF0;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+
+header .menu-icon .navicon:before {
+    top: 10px;
+}
+
+header .menu-icon .navicon:after {
+    top: -10px;
+}
+
+/* menu btn */
+header .menu-btn {
+    display: none;
+}
+
+header .menu-btn:checked ~ .menu {
+    max-height: 240px;
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon {
+    background: transparent;
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon:before {
+    transform: rotate(-45deg);
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon:after {
+    transform: rotate(45deg);
+}
+
+header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+    top: 0;
+}
 
 .mentalhealthhero {
     display: flex;
@@ -160,17 +257,48 @@ footer {
 }
 
 @media (min-width: 800px) {
-    .hamburger-menu {
-        display: none; /* Hide hamburger menu on larger screens */
+    header {
+        grid-column: 1/3;
     }
 
-    .nav-links {
-        display: flex; /* Show navigation links in a row */
-        /* ... additional styles for desktop navigation ... */
+    .dscrphero {
+        text-align: center; /* Align text to the left on larger screens */
+        padding: 20px; /* Add some padding around the text */
+    }
+
+    .middle-container {
+        font-size: 36px; /* Increase font size for larger view */
+        margin: 20px 0; /* Add some margin to the top and bottom */
+    }
+
+    .listofstrat {
+        font-size: 20px; /* Slightly larger font size for readability */
+        padding: 10px; /* Add padding for better spacing */
+        list-style-type: disc; /* Add bullet points to the list */
+        margin-left: 40px; /* Indent the list for better structure */
+    }
+
+    header li {
+        float: left;
+    }
+
+    header li a {
+        padding: 20px 30px;
+    }
+
+    header .menu {
+        clear: none;
+        float: right;
+        max-height: none;
+    }
+
+    header .menu-icon {
+        display: none;
     }
 
     .img1-container {
         grid-template-columns: repeat(3, 1fr); 
+        grid-column: 1/3;
         grid-template-rows: repeat(2, auto); 
     }
     
