--- a/css/roots.css
+++ b/css/roots.css
@@ -1,50 +1,155 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Cedarville+Cursive&family=Fuzzy+Bubbles&display=swap');
+
 body {
     font-family: 'Barlow Condensed', sans-serif;
 }
+
+a {
+    color: #E6EBF0;
+    text-decoration: none;
+}
+
 .container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 150px 100px auto auto 60px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 150px 100px auto auto auto auto 60px;
     gap: 10px;
 }
 
 header {
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 1/2;
     background-color: #032030;
     overflow: hidden;
     margin: -10px;
-} 
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-header a {
-    float: right;
-    color: #E6EBF0;
-    text-align: center;
-    padding: 14px 16px;
+}
+
+header ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    overflow: hidden;
+}
+
+header li a {
+    display: block;
+    padding: 20px 20px;
     text-decoration: none;
-    font-size: 30px;
+    font-size: 27px;
 }
 
-.logo {
+header li a:hover,
+header .menu-btn:hover {
+    background-color: #E6EBF0;
+    color:#032030;
+}
+
+header .leaf {
+    display: block;
+    float: left;
+    width: 100%;
+    height: 100%;
+}
+
+header .logo {
+    width: 35%;
+    height: auto;
+}
+
+.header-content {
+    display: flex;
+    align-items: center;
+}
+
+header .menu {
+    clear: both;
+    max-height: 0;
+    transition: max-height .2s ease-out;
+
+}
+
+header .menu-icon {
+    cursor: pointer;
     display: inline-block;
-    vertical-align: top;
-    width: 200px;
-    height: 150px;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    float: right;
+    padding: 28px 20px;
+    position: relative;
 }
 
+header .menu-icon .navicon {
+    background: #E6EBF0;
+    display: block;
+    height: 3px;
+    position: relative;
+    transition: background .2s ease-out;
+    width: 30px;
+}
+
+header .menu-icon .navicon:before,
+header .menu-icon .navicon:after {
+    background: #E6EBF0;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+
+header .menu-icon .navicon:before {
+    top: 10px;
+}
+
+header .menu-icon .navicon:after {
+    top: -10px;
+}
+
+/* menu btn */
+header .menu-btn {
+    display: none;
+}
+
+header .menu-btn:checked ~ .menu {
+    max-height: 240px;
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon {
+    background: transparent;
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon:before {
+    transform: rotate(-45deg);
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon:after {
+    transform: rotate(45deg);
+}
+
+header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+    top: 0;
+}
+
+.res-name,
+.img-reservation,
+.about,
+.contact-info,
+.hours-of-op,
+footer {
+    grid-column: 1/2;
+}
 
 .res-name {
-    grid-column: 1/3;
     grid-row: 2/3;
     font-size: xx-large;
     padding-left: 10px;
-    
 }
 
 .img-reservation {
-    grid-column: 1/2;
     grid-row: 3/4;
     position: relative;
 }
@@ -76,46 +181,20 @@ button {
     font-size: 30px;
 }
 
-.about {
-    grid-column: 2/3;
-    grid-row: 3/4;
-    text-align: center;
-}
-.about h2 {
-    font-size: 40px;
-}
-.about p {
-    font-size: x-large;
-    padding-left: 30px;
-    padding-right: 30px;
-}
-
-.hours-of-op {
-    grid-column: 2/3;
-    grid-row: 4/5;
-    text-align: center;
-}
-
-.hours-of-op h2 {
-    font-size: 40px;
-}
-
-.hours-of-op p {
-    font-size: x-large;
-    padding-left: 30px;
-    padding-right: 30px;
-}
-
+.about,
+.hours-of-op,
 .contact-info {
-    grid-column: 1/2;
-    grid-row: 4/5;
     text-align: center;
 }
 
-.contact-info h2{
+.about h2,
+.hours-of-op h2,
+.contact-info h2 {
     font-size: 40px;
 }
 
+.about p,
+.hours-of-op p,
 .contact-info p {
     font-size: x-large;
     padding-left: 30px;
@@ -123,24 +202,23 @@ button {
 }
 
 footer {
-    grid-column: 1/3;
-    grid-row: 5/6;
+    grid-row: 7/8;
     text-align: center;
     background-color: #E6EBF0;
     font-size: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
+    margin: -10px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 800px) {
     .container {
-        grid-template-columns: 1fr;
-        grid-template-rows: 150px 100px auto auto auto auto 60px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 150px 100px auto auto auto auto;
     }
 
     header {
-        grid-column: 1/2;
-        grid-row: 1/2;
+        grid-column: 1/3;
     }
 
     .res-name {
@@ -154,23 +232,46 @@ footer {
     }
 
     .about {
-        grid-column: 1/2;
-        grid-row: 4/5;
+        grid-column: 2/3;
+        grid-row: 3/4;
     }
 
     .contact-info {
         grid-column: 1/2;
-        grid-row:5/6;
+        grid-row: 4/5;
     }
 
     .hours-of-op {
-        grid-column: 1/2;
-        grid-row: 6/7;
+        grid-column: 2/3;
+        grid-row: 4/5;
+    }
+
+    header {
+        grid-column: 1/3;
+    }
+
+    header li {
+        float: left;
+    }
+
+    header li a {
+        padding: 20px 30px;
+    }
+
+    header .menu {
+        clear: none;
+        float: right;
+        max-height: none;
+   
+    }
+
+    header .menu-icon {
+        display: none;
     }
 
     footer {
-        grid-column: 1/2;
-        grid-row: 7/8;
+        grid-column: 1/3;
+        grid-row: 5/6;
+        margin: -10px;
     }
-
 }
