--- a/css/styles.css
+++ b/css/styles.css
@@ -4,39 +4,144 @@
 body {
     font-family: 'Barlow Condensed', sans-serif;
 }
-
+a {
+    color: #E6EBF0;
+    text-decoration: none;
+}
 .container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto auto auto auto;
-    margin: -10px;
+    grid-template-rows: auto auto auto auto;
+    row-gap: 10px;
+    
 }
 
-
 header {
+    grid-column: 1/2;
+    grid-row: 1/2;
     background-color: #032030;
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center; 
-    padding: 0 20px;
+    overflow: hidden;
+    margin: -10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+header ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
     overflow: hidden;
 }
 
-.logo {
+header li a {
+    display: block;
+    padding: 20px 20px;
+    text-decoration: none;
+    font-size: 27px;
+}
+
+header li a:hover,
+header .menu-btn:hover {
+    background-color: #E6EBF0;
+    color:#032030;
+}
+
+header .leaf {
+    display: block;
+    float: left;
+    width: 100%;
+    height: 100%;
+}
+
+header .logo {
+    width: 35%;
+    height: auto;
+}
+
+.header-content {
+    display: flex;
+    align-items: center;
+}
+
+header .menu {
+    clear: both;
+    max-height: 0;
+    transition: max-height .2s ease-out;
+
+}
+
+header .menu-icon {
+    cursor: pointer;
     display: inline-block;
-    vertical-align: top;
-    width: 200px;
-    height: 150px;
+    float: right;
+    padding: 28px 20px;
+    position: relative;
+}
+
+header .menu-icon .navicon {
+    background: #E6EBF0;
+    display: block;
+    height: 3px;
+    position: relative;
+    transition: background .2s ease-out;
+    width: 30px;
+}
+
+header .menu-icon .navicon:before,
+header .menu-icon .navicon:after {
+    background: #E6EBF0;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+
+header .menu-icon .navicon:before {
+    top: 10px;
+}
+
+header .menu-icon .navicon:after {
+    top: -10px;
+}
+
+/* menu btn */
+header .menu-btn {
+    display: none;
+}
+
+header .menu-btn:checked ~ .menu {
+    max-height: 240px;
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon {
+    background: transparent;
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon:before {
+    transform: rotate(-45deg);
+}
+
+header .menu-btn:checked ~ .menu-icon .navicon:after {
+    transform: rotate(45deg);
+}
+
+header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+    top: 0;
 }
 
 .hero-text {
     text-align: center;
     position: absolute;
-    font-size: 5vw; /* Adjusted for mobile */
+    font-size: 40px; 
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: #E6EBF0;
 }
 
 .hero-image {
@@ -44,29 +149,41 @@ header {
     background-position: center;
     background-size: cover;
     position: relative;
-    height: 200px; /* Adjusted for mobile */
+    height: 200px; 
+    margin: -10px;
 }
 
 .content-2 {
     text-align: center;
 }
 
+.content-2 h1 {
+    font-size: xx-large;
+}
+
+.content-2 h2 {
+    font-size: x-large;
+    font-style: bold;
+}
+
 .content-2 p {
-    font-size: medium; /* Adjusted for mobile */
+    font-size: x-large; 
 }
 
 footer {
     text-align: center;
     background-color: #E6EBF0;
-    font-size: 20px; /* Adjusted for mobile */
-    padding: 10px;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: -10px;
 }
 
-/* Media Query for Desktop Screens */
 @media screen and (min-width: 800px) {
     .container {
         grid-template-columns: 1fr;
-        grid-template-rows: 150px 1fr 1fr 60px;
+        grid-template-rows: 150px 1fr 1fr auto;
     }
 
     header {
@@ -79,13 +196,23 @@ footer {
         font-size: 30px;
     }
 
-    .logo {
-        display: inline-block;
-        vertical-align: top;
-        width: 200px;
-        height: 150px;
-        margin-right: 20px;
-        margin-bottom: 20px;
+    header li {
+        float: left;
+    }
+
+    header li a {
+        padding: 20px 30px;
+    }
+
+    header .menu {
+        clear: none;
+        float: right;
+        max-height: none;
+   
+    }
+
+    header .menu-icon {
+        display: none;
     }
 
     .hero-text {
@@ -104,8 +231,4 @@ footer {
         grid-row: 3/4;
     }
 
-    footer {
-        grid-column: 1/3;
-        grid-row: 4/5;
-    }
 }
