--- a/css/form.css
+++ b/css/form.css
@@ -7,7 +7,7 @@ body {
 .container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto 60px;
+    grid-template-rows: auto auto;
     gap: 10px;
     margin: -10px;
 }
@@ -108,7 +108,6 @@ header .menu-icon .navicon:after {
     top: -10px;
 }
 
-/* menu btn */
 header .menu-btn {
     display: none;
 }
@@ -178,26 +177,15 @@ input {
 }
 
 #submit {
-    background-color: #E6EBF0;
+    background-color: #4CAF50;
     border: none;
     width: 100%;
     padding: 10px;
     height: 40px;
     font-size: medium;
+    border-radius: 10px;
 }
 
-footer {
-    grid-column: 1/2;
-    grid-row: 3/4;
-    text-align: center;
-    background-color: #E6EBF0;
-    font-size: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin: -10px;
-}
-
-/* Mobile First Styles */
 @media screen and (min-width: 800px) {
     header li {
         float: left;
@@ -255,7 +243,4 @@ footer {
         grid-column: 1/3;
     }
 
-    footer {
-        grid-row: 6/7;
-    }
 }
